k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-noauth
  labels:
    name: webapp-noauth
